--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "wad2lab7",
+  "name": "wpd2jlab5",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FionaMacRaeFairlie/WAD2Lab7.git"
-  },
   "author": "Fiona Fairlie",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/FionaMacRaeFairlie/WAD2Lab7/issues"
-  },
-  "homepage": "https://github.com/FionaMacRaeFairlie/WAD2Lab7#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "bootstrap": "^5.3.3",
     "express": "^4.17.2",
+    "gray-nedb": "^1.8.3",
     "mustache-express": "^1.3.2",
-    "nedb": "^1.8.0",
     "path": "^0.12.7"
   }
 }
